<resources>
    <string name="app_name">NoIdea</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_reviews_fragment">Hello Reviews fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="search_by_name">Search by Name</string>
    <string name="game_name">Game Name</string>
    <string name="game_image">Game_Image</string>
    <string name="date">Date</string>
    <string name="release_date">Release Date:</string>
    <string name="load_image">Load Image</string>
    <string name="game_platform">Game Platform</string>
    <string name="game_thumbnail">Game Thumbnail</string>
    <string name="add_game">Add Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="platform">Platform :</string>
    <string name="release_date2">Release Date :</string>
    <string name="publisher">Publisher :</string>
    <string name="logo">logo</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_game">Add New Game</string>

</resources>