<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/purple_200"
    android:scrollbars="vertical"
    app:cardCornerRadius="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/purple_200"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/itemGamePublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginBottom="52dp"
            android:gravity="start"
            android:text="@string/platform"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage" />

        <TextView
            android:id="@+id/itemGameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="84dp"
            android:gravity="start"
            android:text="@string/platform"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage" />

        <TextView
            android:id="@+id/itemGamepub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="52dp"
            android:gravity="start"
            android:text="@string/publisher"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage"
            app:layout_constraintTop_toBottomOf="@+id/itemGameView"
            app:layout_constraintVertical_bias="0.928" />

        <TextView
            android:id="@+id/itemGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/game_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <ImageView
            android:id="@+id/itemGameImage"
            android:layout_width="88dp"
            android:layout_height="93dp"
            android:contentDescription="@string/game_image"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/itemGameDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:gravity="start"
            android:text="@string/date"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage" />

        <TextView
            android:id="@+id/itemGamePlatform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:gravity="start"
            android:text="@string/platform"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.361"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage" />

        <TextView
            android:id="@+id/itemView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="22dp"
            android:gravity="start"
            android:text="@string/release_date"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemGameImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>